src/app/registry/registry.component.css
h1 {
  font-family: freight-big-pro;
  font-weight: 400;
  font-style: normal;
  font-size: 65px;
  letter-spacing: .02em;
  line-height: 1.25em;
  text-transform: none;
}

.top-title {
  color: #e60004;
}

.image {
  height: 400px;
  width: 500px;
}

.image img {
  text-align: center;
  object-fit: contain;
  margin: auto;
  display: block;
}

